--- a/gulimail-ware/pom.xml
+++ b/gulimail-ware/pom.xml
@@ -13,11 +13,18 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>gulimail-ware</name>
     <description>Demo project for Spring Boot</description>
+
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>2020.0.3</spring-cloud.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
     </properties>
+
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>com.atguigu.gulimall</groupId>-->
+<!--            <artifactId>gulimall-common</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -33,6 +40,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -53,5 +61,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
