项目+分布式简介

--- a/gulimail-coupon/src/main/resources/bootstrap.properties
+++ b/gulimail-coupon/src/main/resources/bootstrap.properties
@@ -1,2 +1,5 @@
-spring.application.name=gulimail-coupon
+spring.application.name=gulimail-common
+
 spring.cloud.nacos.config.server-addr=10.100.50.77:8848
+
+spring.cloud.nacos.config.namespace=3ad7f490-f83e-4ddb-85f6-0a5a563c88c0
