--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -37,6 +37,12 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
   mvc:
     throw-exception-if-no-handler-found: true
+  application:
+    name: renren-fast
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 10.100.50.77:8848
 #  resources:
 #    add-mappings: false
 
