--- a/gulimail-product/src/main/resources/application.yaml
+++ b/gulimail-product/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 10.100.50.77:8848
   application:
     name: gulimail-product
 mybatis-plus:
@@ -15,5 +15,11 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+
 server:
-  port: 10008
+  port: 10000
+logging:
+  level:
+    com.atguigu.gulimail: debug
